# Capstone-AiModule

./: README.md  SYSTEM_DESIGN_AND_WORKFLOW.txt  pyproject.toml  requirements.txt
Backend/: pyproject.toml  requirements.txt
Backend/zero_day_defense/: __main__.py  api.py  cli.py  config.yaml  dashboard.py  pipeline.py  settings.py
Backend/zero_day_defense/agent/: lang_agent.py
Backend/zero_day_defense/data/: live_probe.py  loaders.py
Backend/zero_day_defense/models/: forecasting.py  lstm_char.py  perception.py
Frontend/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.jsx  index.css
Frontend/src/components/: AIInsights.jsx  EventAuditTable.jsx  Header.jsx  MetricCard.jsx  ThreatCharts.jsx
artifacts/: forecasting.pkl  lstm_char.pt  lstm_char_meta.pkl  perception.pkl  run_output.json
